--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4",
+    "@babel/core": "7.15.5",
+    "@babel/preset-env": "7.15.4",
     "@babel/preset-react": "7.14.5",
     "jest": "27.2.4",
     "react-test-renderer": "17.0.2",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "8.2.2",
     "core-js": "3.18.0",
     "sass": "1.42.1",
     "webpack": "5.52.0",
