--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mini-css-extract-plugin": "2.4.2",
     "css-loader": "6.4.0",
     "style-loader": "3.3.0",
+    "postcss-loader": "6.2.0",
     "sass-loader": "12.1.0",
     "html-loader": "2.1.2"
   },
