--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "6.4.0",
     "style-loader": "3.3.0",
     "postcss-loader": "6.2.0",
+    "autoprefixer": "10.3.7",
     "sass-loader": "12.1.0",
     "html-loader": "2.1.2"
   },
